--- a/public/Auth/Html/login.html
+++ b/public/Auth/Html/login.html
@@ -37,6 +37,10 @@
             <input id="passwordInput" type="password" placeholder="Password" required/>
               <i class="fas fa-eye" id="togglePassword"  style="cursor: pointer;"></i>
           </div>
+         <div class="fgPasssword">
+  <a href="#" class="fg-link">Forget Password?</a>
+  <a href="#" class="fg-link">Sign In</a>
+</div>
 
           <button type="submit">Sign Up</button>
         </form>
