Implement Session and local storage And add the landing page

--- a/public/Auth/Html/login.html
+++ b/public/Auth/Html/login.html
@@ -3,20 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EduManage Pro | College Management System</title>
-  <link rel="stylesheet" href="../Css/login.css">
+  <title>SmartEdu/Login</title>
+  <link rel="stylesheet" href="../Css/login.css"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <!-- Floating particles for background effect -->
-  <div class="particles" id="particles"></div>
+  
+  
+
+    <div id="messageBox" class="message-box"></div>
 
   <div class="container">
+
+
     <div class="box">
       <div class="slideImage">
         <img src="../../Asset/college-campus.jpg" alt="College Campus"/>
         <div class="image-overlay">
-          <h2>Welcome to EduManage Pro</h2>
+          <h2>Welcome to SmartEdu </h2>
           <p>Streamline your college operations with our comprehensive management system. Access student records, course materials, and administrative tools all in one place.</p>
         </div>
       </div>
@@ -25,7 +29,7 @@
         <div class="logo">
           <img src="../../Asset/vector-graphic-gold-graduation-hat-academic-college-university-high-school-with-laurel-wreath_771881-231.avif" alt="College Logo"/>
         </div>
-        <h2>College Management Login</h2>
+        <h2>SmartEdu Login</h2>
 
         <form id="loginForm">
           <div class="inputGroup">
@@ -45,16 +49,7 @@
           </div>
 
           <button type="submit">Login</button>
-        </form>
-
-        <div class="social-login">
-          <p>Or login with</p>
-          <div class="social-icons">
-            <a href="#"><i class="fab fa-google"></i></a>
-            <a href="#"><i class="fab fa-microsoft"></i></a>
-            <a href="#"><i class="fab fa-apple"></i></a>
-          </div>
-        </div>
+        </form>       
       </div>
 
       <div class="formSection signup-form">
@@ -64,10 +59,7 @@
         <h2>Create Your Account</h2>
 
         <form id="signupForm">
-          <!-- <div class="inputGroup">
-            <i class="fas fa-user"></i>
-            <input type="text" placeholder="Full Name" required/>
-          </div> -->
+         
 
           <div class="inputGroup">
             <i class="fas fa-envelope"></i>
@@ -87,14 +79,7 @@
           <button type="submit">Sign Up</button>
         </form>
 
-        <div class="social-login">
-          <p>Or sign up with</p>
-          <div class="social-icons">
-            <a href="#"><i class="fab fa-google"></i></a>
-            <a href="#"><i class="fab fa-microsoft"></i></a>
-            <a href="#"><i class="fab fa-apple"></i></a>
-          </div>
-        </div>
+        
       </div>
 
 
